src/test/resources/extension/valid/basic/noreturnCall.awsl
begin

int f() is
    println "hello, world!";
    return 0;
end

call f();

end